# PaxAtlas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Pax Atlas.sln  Pax Atlas.vcxproj  Pax Atlas.vcxproj.filters
Information/: armies.json  countries.json  provinces.json
Source/: CMakeLists.txt  FrameRate.cc  FrameRate.hh  Main.cc  Map.cc  Map.hh
Source/Army/: .Army.cc.swo  .Army.hh.swn  .Army.hh.swo  Army.cc  Army.hh  CMakeLists.txt  Loader.cc  Loader.hh
Source/Country/: CMakeLists.txt  Country.cc  Country.hh  CountryLoader.cc  CountryLoader.hh
Source/Mikan/: CMakeLists.txt  Debug.cc  Debug.hh  Engine.cc  Engine.hh  Entity.cc  Entity.hh  EntityLoader.cc  EntityLoader.hh
Source/Province/: CMakeLists.txt  MapConverter.cc  MapConverter.hh  Province.cc  Province.hh  ProvinceLoader.cc  ProvinceLoader.hh
